meta tags.. readme

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
    <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="Jennifer Carlington's Photography">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="#"> <!-- Replace with your actual URL -->
-    <meta property="og:image" content="#"> <!-- Replace with your actual image URL -->
+    <meta property="og:url" content="https://jennifercarlington.netlify.app"> <!-- Replace with your actual URL -->
+    <meta property="og:image" content="https://jennifercarlington.netlify.app/images/hero.image.jpg"> <!-- Replace with your actual image URL -->
     <meta property="og:description" content="Explore the stunning photography and videography by Jennifer Carlington, capturing life's special moments with passion and creativity.">
     <meta property="og:site_name" content="Jennifer Carlington's Photo and Videography">
     <meta name="description" content="Explore Jennifer Carlington's stunning photography and videography portfolio, showcasing over 10 years of experience capturing life's special moments. Contact Jennifer for your photography needs.">
@@ -22,8 +22,8 @@
     <meta name="twitter:card" content="summary_large_image"> <!-- Use 'summary' for smaller images, 'summary_large_image' for larger images -->
     <meta name="twitter:title" content="Jennifer Carlington's Photo and Videography">
     <meta name="twitter:description" content="Explore the stunning photography and videography by Jennifer Carlington, capturing life's special moments with passion and creativity.">
-    <meta name="twitter:image" content="#"> <!-- Replace with your actual image URL -->
-    <meta name="twitter:url" content="#"> <!-- Replace with your actual URL -->
+    <meta name="twitter:image" content="https://jennifercarlington.netlify.app/images/hero.image.jpg"> <!-- Replace with your actual image URL -->
+    <meta name="twitter:url" content="https://jennifercarlington.netlify.app"> <!-- Replace with your actual URL -->
     <meta name="twitter:site" content="@somehandle"> <!-- Replace with your actual Twitter handle -->
 
     <link rel="stylesheet" href="styles.css">
@@ -45,15 +45,6 @@
     <h2 id="gallery-heading">Portfolio</h2>
     <div class="gallery-grid" role="list" id="gallery-grid">
         <!-- Images will be populated here dynamically -->
-      <!-- <img src="./images/gallery/biuldings-streetview.jpg" alt="Beautiful landscape photography" class="gallery-item" role="listitem">
-      <img src="./images/gallery/countryside-sky.jpg" alt="Sepia toned portrait photography" class="gallery-item" role="listitem">
-      <img src="./images/gallery/Desert Sepia Wallpaper Cabin.jpg" alt="Artistic sepia photo" class="gallery-item" role="listitem">
-      <img src="./images/gallery/lone-tree-fence.jpg" alt="Desert cabin scene in sepia" class="gallery-item" role="listitem">
-      <img src="./images/gallery/reflective-lakeside.jpg" alt="A striking sunset photography" class="gallery-item" role="listitem">
-      <img src="./images/gallery/rosmery-camera-retro.jpg" alt="Vibrant nature photography" class="gallery-item" role="listitem">
-      <img src="./images/gallery/sepia-bridge.jpg" alt="Creative photography of urban life" class="gallery-item" role="listitem">
-      <img src="./images/gallery/sepia-lake-cabin.jpg" alt="Creative photography of urban life" class="gallery-item" role="listitem"> -->
-      <!-- Add more images here -->
     </div>
     
     <!-- Lightbox -->
